--- a/en/introduction.html
+++ b/en/introduction.html
@@ -86,7 +86,7 @@
                         </li>
 
                         <li>
-                            <span>2</span>
+                            <span style="margin-top: 26px;">2</span>
                             <div>
                                 With a focus on innovation, high-quality service, and advanced technological solutions, we are committed to making a meaningful contribution to advancing the world of information technology. Through this commitment, we strive to build strong, long-term relationships with customers, become a reliable partner, and continue to be a leading provider of IT solutions.
                             </div>
@@ -339,7 +339,7 @@
 
                             <li>
                                 <span>Agu</span>
-                                <div>
+                                <div style="padding-top: 8px;">
                                     Opened a branch in Jeju<br /><br />
                                     Inspections and investigations at 100 bus terminals in Indonesia
                                 </div>
@@ -452,7 +452,7 @@
 
                             <li>
                                 <span>Jun</span>
-                                <div class="spacetop">
+                                <div style="padding-top: 12px;">
                                     Open and operate an integrated transportation call center
                                 </div>
                             </li>
