--- a/in/introduction.html
+++ b/in/introduction.html
@@ -79,14 +79,14 @@
 
                     <ul>
                         <li>
-                            <span>1</span>
+                            <span style="margin-top: 12px;">1</span>
                             <div>
                                 Menyediakan teknologi berbasis komputer dan digital maupun pengembangan perangkat keras dan perangkat lunak dengan fokus pada solusi yang inovatif dan kreatif untuk memenuhi kebutuhan pelanggan.
                             </div>
                         </li>
 
                         <li>
-                            <span>2</span>
+                            <span style="margin-top: 26px;">2</span>
                             <div>
                                 Berfokus pada inovasi, layanan berkualitas tinggi, dan solusi teknologi yang canggih, kami bertekad untuk memberikan kontribusi yang berarti dalam memajukan dunia teknologi informasi. Melalui komitmen ini, kami berusaha untuk membangun hubungan jangka panjang yang kuat dengan pelanggan, menjadi mitra yang dapat diandalkan, dan terus menjadi penyedia solusi IT terdepan.
                             </div>
