--- a/kr/ceo.html
+++ b/kr/ceo.html
@@ -42,7 +42,7 @@
                     <div class="imx">
 
                         <div class="inner">
-                            <img class="ceo-img" src='../assets/img/headquarters-img02.png' />
+                            <img class="ceo-img" src='../assets/img/ceo_mrson.jpg' />
                             <div class="text-box">
                                 <span>
                                     안녕하세요, Networks Indonesia Aku (NIA)의 법인장 손동권입니다.<br /><br />
