--- a/kr/introduction.html
+++ b/kr/introduction.html
@@ -87,7 +87,7 @@
                         </li>
 
                         <li>
-                            <span>2</span>
+                            <span style="margin-top: 14px;">2</span>
                             <div class="font-notoserif">
                                 고품질 서비스 및 최신 기술 솔루션에 중점을 두고 정보 기술 분야를 발전시키는데 의미 있는 <br /> 기여를 할 것을 약속하며, 이를 통해 장기적으로 고객과의 강한 신뢰 관계를 구축할 수 있는 <br /> 파트너로써 IT 솔루션의 선도적인 공급자가 되기 위해 노력합니다.
                             </div>
@@ -204,35 +204,35 @@
                         <ul class="fr w80 month">
                             <li>
                                 <span>11월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     2023 글로벌코리아 포럼 ODA 우수사례 국무총리 표창 수상
                                 </div>
                             </li>
 
                             <li>
                                 <span>10월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업“ 완료 
                                 </div>
                             </li>
 
                             <li>
                                 <span>9월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     인도네시아 버스터미널 현대화 사업 오프닝 세레머니 개최
                                 </div>
                             </li>
 
                             <li>
                                 <span>7월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     인도네시아 버스터미널 현대화 수립사업 초청 연수(5박6일)<br /><br /> 대한민국 서울, 세종(정부청사), 울산, 전주, 부산(종합버스터미널) 등
                                 </div>
                             </li>
 
                             <li>
                                 <span>4월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     인도네시아 화물 운송 플랫폼 개발 착수<br /><br />
                                     인도네시아 A형 전체 터미널 확대를 위한 현장조사 실시<br /><br />
                                 </div>
@@ -240,15 +240,15 @@
 
                             <li>
                                 <span>2월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     인도네시아 버스터미널 현대화 시스템 시범운영을 위한 터미널별 교육 실시
                                 </div>
                             </li>
 
                             <li>
                                 <span>1월</span>
-                                <div>
-                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br />   <p class="p-left">3차년 사업 착수</p>
+                                <div style="padding-top: 12px;">
+                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br /><p class="p-left">3차년 사업 착수</p>
                                 </div>
                             </li>
                         </ul>
@@ -259,15 +259,15 @@
                         <ul class="fr w80 month">
                             <li>
                                 <span>12월</span>
-                                <div>
-                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br /> 2차년 사업 완료<br /> <br /> 인도네시아 버스터미널 현대화 시스템 홍보 및 확대 세미나 개최<br /> (스마랑 노보텔 호텔)<br /><br />
+                                <div style="padding-top: 12px;">
+                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br /> <p class="p-left">2차년 사업 완료</p><br /> <br /> 인도네시아 버스터미널 현대화 시스템 홍보 및 확대 세미나 개최<br /> (스마랑 노보텔 호텔)<br /><br />
                                     인도네시아 교통부, 인도네시아 전국 터미널 대표 참석
                                 </div>
                             </li>
 
                             <li>
                                 <span>11월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     인도네시아 버스터미널 현대화 수립사업 초청 연수(4박5일) <br /><br />
                                     대한민국 서울, 세종(정부청사), 대전(복합버스터미널) 등
                                 </div>
@@ -275,8 +275,8 @@
 
                             <li>
                                 <span>1월</span>
-                                <div>
-                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br /> 2차년 사업 착수
+                                <div style="padding-top: 12px;">
+                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br /> <p class="p-left">2차년 사업 착수</p>
                                 </div>
                             </li>
                         </ul>
@@ -287,22 +287,22 @@
                         <ul class="fr w80 month">
                             <li>
                                 <span>12월</span>
-                                <div>
-                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br /> 1차년 사업 완료<br /><br />
+                                <div style="padding-top: 12px;">
+                                    "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" <br /> <p class="p-left">1차년 사업 완료</p><br /><br />
                                     인도네시아 현지 법인 개설(자카르타)
                                 </div>
                             </li>
 
                             <li>
                                 <span>8월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     인공지능형(AI) 헬스케어 플랫폼 ‘건강하다’ 개발 착수
                                 </div>
                             </li>
 
                             <li>
                                 <span>4월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     "인도네시아 버스터미널 현대화 시스템 시범운영 및 마스터플랜 수립사업" 수주”<br />
                                     (ODA, 국토교통부)<br /><br />
                                     인도네시아 시범 터미널 현장검증 및 조사(계속)
@@ -311,7 +311,7 @@
 
                             <li>
                                 <span>2월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     건설분야 운송 플랫폼 ‘올리고’ 출시
                                 </div>
                             </li>
@@ -323,7 +323,7 @@
                         <ul class="fr w80 month">
                             <li>
                                 <span>12월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     “고용노동부 강소기업”, “서울형 강소기업” 선정<br /><br />
                                     해외 건설업 취득(건설엔지니어링 / 정보통신공사업)
                                 </div>
@@ -331,7 +331,7 @@
 
                             <li>
                                 <span>11월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     건설분야 운송 플랫폼 “올리고” 개발<br /><br />
                                     건설분야 폐기물 차량추적 운송시스템 “24시환경” 출시
                                 </div>
@@ -339,7 +339,7 @@
 
                             <li>
                                 <span>8월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     제주지사 오픈<br /><br />
                                     인도네시아 버스터미널 100개 터미널 현장검증 및 조사
                                 </div>
@@ -347,7 +347,7 @@
 
                             <li>
                                 <span>3월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     캄보디아 프놈펜 버스정류장 신설 및 버스터미널, BIS 타당성 조사
                                 </div>
                             </li>
@@ -359,7 +359,7 @@
                         <ul class="fr w80 month">
                             <li>
                                 <span>12월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     KOVA 벤처기업등록(제 20190729-42348호) / Main Biz <br /><br />
                                     인증 획득특허획득 : 자동배차시스템(특허번호 : 제10-2038395호)
 
@@ -368,7 +368,7 @@
 
                             <li>
                                 <span>11월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     위치기반 정보공유 솔루션 특허출원<br /><br />
                                     삼천리 PAY 플랫폼 개발 및 출시(상용화)
                                 </div>
@@ -376,7 +376,7 @@
 
                             <li>
                                 <span>9월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     몽골 울란바토르 ITS 타당성 조사 검증 및 복합터미널 타당성 조사
                                 </div>
                             </li>
@@ -388,21 +388,21 @@
                         <ul class="fr w80 month">
                             <li>
                                 <span>11월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     기업부설연구소 신설(기술연구소 제2018113469호)
                                 </div>
                             </li>
 
                             <li>
                                 <span>5월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     ISO9001 획득 : 18-A-1004 IGC
                                 </div>
                             </li>
 
                             <li>
                                 <span>3월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     Cloud 기반 매표발권시스템 설계 및 개발
                                 </div>
                             </li>
@@ -414,7 +414,7 @@
                         <ul class="fr w80 month">
                             <li>
                                 <span>3월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     전국 운송 플랫폼 지사 및 대리점 25개 개설
                                 </div>
                             </li>
@@ -426,14 +426,14 @@
                         <ul class="fr w80 month">
                             <li>
                                 <span>12월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     전국유선업중앙회 유도선 선박 매표발권시스템 개발 및 유지보수
                                 </div>
                             </li>
 
                             <li>
                                 <span>8월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     통합 지능형 운송 플랫폼 개발 및 출시(상용화)
                                 </div>
                             </li>
@@ -445,14 +445,14 @@
                         <ul class="fr w80 month">
                             <li>
                                 <span>10월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     KT, KT파워텔 등 Mobile 무선통신중계(TRS) 솔루션 설계 및 개발
                                 </div>
                             </li>
 
                             <li>
                                 <span>6월</span>
-                                <div>
+                                <div style="padding-top: 12px;">
                                     운송 통합 콜센터 개설 및 운영
                                 </div>
                             </li>
@@ -464,7 +464,7 @@
                         <ul class="fr w80 month">
                             <li>
                                 <span>10월</span>
-                                <div class="spacetop">
+                                <div style="padding-top: 12px;">
                                     ㈜삼천리네트웍스 설립 (본사, 대한민국 서울)
                                 </div>
                             </li>
