--- a/en/people.html
+++ b/en/people.html
@@ -48,10 +48,10 @@
                         <div class="item fl w33">
                             <div class="imx">
                                 <figure class="image_person">
-                                    <img src="../assets/img/about-img09.png" alt="Mr. Son"/>
+                                    <img src="../assets/img/people_mrson.jpg" alt="Mr. Son"/>
                                     <figcaption>
                                         <h2>Mr. Son</h2>
-                                        <h4>President of Indonesia Branch Office</h4>
+                                        <h4>CEO</h4>
                                     </figcaption>
                                     <a href="#"></a>
                                 </figure>
@@ -74,10 +74,23 @@
                         <div class="item fl w33">
                             <div class="imx">
                                 <figure class="image_person">
-                                    <img src="../assets/img/about-img12.png" alt="Galang"/>
+                                    <img src="../assets/img/people_kiki.JPG" alt="Rizki"/>
+                                    <figcaption>
+                                        <h2>Rizki</h2>
+                                        <h4>Manager</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <div class="item fl w33">
+                            <div class="imx">
+                                <figure class="image_person">
+                                    <img src="../assets/img/people_galang.jpg" alt="Galang"/>
                                     <figcaption>
                                         <h2>Galang</h2>
-                                        <h4>Assistant Manager</h4>
+                                        <h4>IT Support</h4>
                                     </figcaption>
                                     <a href="#"></a>
                                 </figure>
@@ -87,23 +100,10 @@
                         <div class="item fl w33">
                             <div class="imx">
                                 <figure class="image_person">
-                                    <img src="../assets/img/about-img23.png" alt="Sidik"/>
-                                    <figcaption>
-                                        <h2>Sidik</h2>
-                                        <h4>Assistant Manager</h4>
-                                    </figcaption>
-                                    <a href="#"></a>
-                                </figure>
-                            </div>
-                        </div>
-
-                        <div class="item fl w33">
-                            <div class="imx">
-                                <figure class="image_person">
-                                    <img src="../assets/img/about-img21.png" alt="Musa"/>
+                                    <img src="../assets/img/people_musa.jpg" alt="Musa"/>
                                     <figcaption>
                                         <h2>Musa</h2>
-                                        <h4>Developer</h4>
+                                        <h4>IT Developer</h4>
                                     </figcaption>
                                     <a href="#"></a>
                                 </figure>
@@ -113,10 +113,10 @@
                         <div class="item fl w33">
                             <div class="imx">
                                 <figure class="image_person">
-                                    <img src="../assets/img/about-img22.png" alt="Abrar"/>
+                                    <img src="../assets/img/people_abrar.jpg" alt="Abrar"/>
                                     <figcaption>
                                         <h2>Abrar</h2>
-                                        <h4>Developer</h4>
+                                        <h4>IT Developer</h4>
                                     </figcaption>
                                     <a href="#"></a>
                                 </figure>
@@ -126,7 +126,20 @@
                         <div class="item fl w33">
                             <div class="imx">
                                 <figure class="image_person">
-                                    <img src="../assets/img/about-img13.png" alt="Erika"/>
+                                    <img src="../assets/img/people_arif.jpg" alt="Arif"/>
+                                    <figcaption>
+                                        <h2>Arif</h2>
+                                        <h4>Web Designer</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <div class="item fl w33">
+                            <div class="imx">
+                                <figure class="image_person">
+                                    <img src="../assets/img/people_erika.jpg" alt="Erika"/>
                                     <figcaption>
                                         <h2>Erika</h2>
                                         <h4>Accounting Assistant</h4>
@@ -139,7 +152,72 @@
                         <div class="item fl w33">
                             <div class="imx">
                                 <figure class="image_person">
-                                    <img src="../assets/img/about-img14.png" alt="Yudistira"/>
+                                    <img src="../assets/img/people_dwi.jpg" alt="Dwi"/>
+                                    <figcaption>
+                                        <h2>Dwi</h2>
+                                        <h4>Business Assistant</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <!--<div class="item fl w33">
+                            <div class="imx">
+                                <figure class="image_person">
+                                    <img src="../assets/img/about-img23.png" alt="Sidik"/>
+                                    <figcaption>
+                                        <h2>Sidik</h2>
+                                        <h4>Assistant Manager</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
+                            </div>
+                        </div>-->
+
+                        <div class="item fl w33">
+                            <div class="imx">
+                                <figure class="image_person">
+                                    <img src="../assets/img/people_elvira.jpg" alt="Elvira"/>
+                                    <figcaption>
+                                        <h2>Elvira</h2>
+                                        <h4>Business Assistant</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <div class="item fl w33">
+                            <div class="imx">
+                                <figure class="image_person">
+                                    <img src="../assets/img/people_chika.jpg" alt="Chika"/>
+                                    <figcaption>
+                                        <h2>Chika</h2>
+                                        <h4>Content Creator</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <div class="item fl w33">
+                            <div class="imx">
+                                <figure class="image_person">
+                                    <img src="../assets/img/people_kibo.jpg" alt="Kiki"/>
+                                    <figcaption>
+                                        <h2>Kiki</h2>
+                                        <h4>Videographer & Editor</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <div class="item fl w33">
+                            <div class="imx">
+                                <figure class="image_person">
+                                    <img src="../assets/img/people_yudis.jpg" alt="Yudistira"/>
                                     <figcaption>
                                         <h2>Yudistira</h2>
                                         <h4>Designer</h4>
@@ -148,33 +226,6 @@
                                 </figure>
                             </div>
                         </div>
-
-                        <div class="item fl w33">
-                            <div class="imx">
-                                <figure class="image_person">
-                                    <img src="../assets/img/about-img15.png" alt="Dwi"/>
-                                    <figcaption>
-                                        <h2>Dwi</h2>
-                                        <h4>Assistant</h4>
-                                    </figcaption>
-                                    <a href="#"></a>
-                                </figure>
-                            </div>
-                        </div>
-
-                        <div class="item fl w33">
-                            <div class="imx">
-                                <figure class="image_person">
-                                    <img src="../assets/img/about-img17.png" alt="Rizki"/>
-                                    <figcaption>
-                                        <h2>Rizki</h2>
-                                        <h4>Manager</h4>
-                                    </figcaption>
-                                    <a href="#"></a>
-                                </figure>
-                            </div>
-                        </div>
-
                     </div>
                 </div>
             </div>
