--- a/kr/people.html
+++ b/kr/people.html
@@ -52,7 +52,7 @@
                                     <img src="../assets/img/people_mrson.jpg" alt="Mr. Son"/>
                                     <figcaption>
                                         <h2>Mr. Son</h2>
-                                        <h4>President of Indonesia Branch Office</h4>
+                                        <h4>CEO</h4>
                                     </figcaption>
                                     <a href="#"></a>
                                 </figure>
