--- a/en/business.html
+++ b/en/business.html
@@ -71,7 +71,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Our Products & Services:</h4>
+                        <h4>Our Products & Services</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img03.png" />
@@ -136,7 +136,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Our Products & Services:</h4>
+                        <h4>Our Products & Services</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img07.jpg" />
@@ -191,7 +191,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Our Products & Services:</h4>
+                        <h4>Our Products & Services</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img11.png" />
@@ -275,7 +275,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Our Products & Services:</h4>
+                        <h4>Our Products & Services</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img17.png" />
@@ -350,7 +350,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Our Products & Services:</h4>
+                        <h4>Our Products & Services</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img22.png" />
@@ -425,7 +425,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Our Products & Services:</h4>
+                        <h4>Our Products & Services</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img27.png" />
