--- a/in/business.html
+++ b/in/business.html
@@ -71,7 +71,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img03.png" />
@@ -136,7 +136,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img07.jpg" />
@@ -192,7 +192,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img11.png" />
@@ -276,7 +276,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img17.png" />
@@ -351,7 +351,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img22.png" />
@@ -426,7 +426,7 @@
 
                 <div class="row">
                     <div class="imx">
-                        <h4>Produk & Layanan kami:</h4>
+                        <h4>Produk & Layanan kami</h4>
                         <ul>
                             <li>
                                 <img src="../assets/img/business-img27.png" />
