--- a/kr/people.html
+++ b/kr/people.html
@@ -62,7 +62,7 @@
                         <div class="item fl w33">
                             <div class="imx">
                                 <figure class="image_person">
-                                    <img src="../assets/img/about-img11.png" alt="Ms. Kim"/>
+                                    <img src="../assets/img/people_misskim.jpg" alt="Ms. Kim"/>
                                     <figcaption>
                                         <h2>Ms. Kim</h2>
                                         <h4>Deputy General Manager</h4>
