--- a/en/people.html
+++ b/en/people.html
@@ -100,6 +100,32 @@
                         <div class="item fl w33">
                             <div class="imx">
                                 <figure class="image_person">
+                                    <img src="../assets/img/people_sidik.jpg" alt="Sidik"/>
+                                    <figcaption>
+                                        <h2>Sidik</h2>
+                                        <h4>IT Support</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <div class="item fl w33">
+                            <div class="imx">
+                                <figure class="image_person">
+                                    <img src="../assets/img/people_arif.jpg" alt="Arif"/>
+                                    <figcaption>
+                                        <h2>Arif</h2>
+                                        <h4>Web Designer</h4>
+                                    </figcaption>
+                                    <a href="#"></a>
+                                </figure>
+                            </div>
+                        </div>
+
+                        <div class="item fl w33">
+                            <div class="imx">
+                                <figure class="image_person">
                                     <img src="../assets/img/people_musa.jpg" alt="Musa"/>
                                     <figcaption>
                                         <h2>Musa</h2>
@@ -126,10 +152,10 @@
                         <div class="item fl w33">
                             <div class="imx">
                                 <figure class="image_person">
-                                    <img src="../assets/img/people_arif.jpg" alt="Arif"/>
+                                    <img src="../assets/img/people_yudis.jpg" alt="Yudistira"/>
                                     <figcaption>
-                                        <h2>Arif</h2>
-                                        <h4>Web Designer</h4>
+                                        <h2>Yudistira</h2>
+                                        <h4>Designer</h4>
                                     </figcaption>
                                     <a href="#"></a>
                                 </figure>
@@ -162,19 +188,6 @@
                             </div>
                         </div>
 
-                        <!--<div class="item fl w33">
-                            <div class="imx">
-                                <figure class="image_person">
-                                    <img src="../assets/img/about-img23.png" alt="Sidik"/>
-                                    <figcaption>
-                                        <h2>Sidik</h2>
-                                        <h4>Assistant Manager</h4>
-                                    </figcaption>
-                                    <a href="#"></a>
-                                </figure>
-                            </div>
-                        </div>-->
-
                         <div class="item fl w33">
                             <div class="imx">
                                 <figure class="image_person">
@@ -206,21 +219,8 @@
                                 <figure class="image_person">
                                     <img src="../assets/img/people_kibo.jpg" alt="Kiki"/>
                                     <figcaption>
-                                        <h2>Kiki</h2>
+                                        <h2>Risky</h2>
                                         <h4>Videographer & Editor</h4>
-                                    </figcaption>
-                                    <a href="#"></a>
-                                </figure>
-                            </div>
-                        </div>
-
-                        <div class="item fl w33">
-                            <div class="imx">
-                                <figure class="image_person">
-                                    <img src="../assets/img/people_yudis.jpg" alt="Yudistira"/>
-                                    <figcaption>
-                                        <h2>Yudistira</h2>
-                                        <h4>Designer</h4>
                                     </figcaption>
                                     <a href="#"></a>
                                 </figure>
