Fixing Mobile Version

--- a/en/ceo.html
+++ b/en/ceo.html
@@ -41,7 +41,7 @@
                     <div class="imx">
 
                         <div class="inner">
-                            <img class="ceo-img" src='../assets/img/headquarters-img02.png' />
+                            <img class="ceo-img" src='../assets/img/ceo_mrson.jpg' />
                             <div class="text-box">
                                 <span>
                                     Respected Greetings,<br /><br />
