--- a/en/introduction.html
+++ b/en/introduction.html
@@ -69,13 +69,13 @@
 
                     <h3>Vision & Mission</h3>
 
-                    <h4>Vision :</h4>
+                    <h4>Vision</h4>
 
                     <p>
                         To become a leading IT company in Indonesia with a focus on prioritizing environmentally friendly products and services. Creating technology for the advancement of transportation and infrastructure, technology in the fields of health, education, logistics, smart factories, online payment systems, and their development.
                     </p>
 
-                    <h4>Mision :</h4>
+                    <h4>Mision</h4>
 
                     <ul>
                         <li>
