--- a/in/introduction.html
+++ b/in/introduction.html
@@ -69,13 +69,13 @@
 
                     <h3>Vision & Mission</h3>
 
-                    <h4>Visi NIA :</h4>
+                    <h4>Visi NIA</h4>
 
                     <p>
                         Menjadikan perusahaan IT terkemuka di Indonesia dengan fokus mengedepankan produk dan layanan jasa yang ramah lingkungan. Menciptakan teknologi untuk kemajuan transportasi dan infrastruktur, teknologi pada bidang kesehatan, pendidikan, logistik, <i>smart factory</i>, <i>online payment system</i>, dan pengembannya.
                     </p>
 
-                    <h4>Misi NIA :</h4>
+                    <h4>Misi NIA</h4>
 
                     <ul>
                         <li>
