--- a/in/media.html
+++ b/in/media.html
@@ -38,7 +38,7 @@
                 <div class="title clear">
                     <div class="fr">
                         <select>
-                            <option>judul + isi</option>
+                            <option>Judul + Isi</option>
                         </select>
                         <div class="search-box">
                             <input type="text" placeholder="Masukan pencarian" />
