--- a/in/office.html
+++ b/in/office.html
@@ -50,7 +50,7 @@
         <!-- office-wrapper start -->
         <div class='office-wrapper'>
             <div class="row">
-
+                <span class="mobile-only">Beyond Technology, Towards People</span>
                 <div class="clear">
                     <div class="fl w50 sld-box">
                         <div class="owl-carousel owl-theme">
@@ -68,7 +68,7 @@
                     </div>
                     
                     <div class="fr w50 caption"> 
-                        <span>Beyond Technology, Towards People</span>
+                        <span class="mobile-hide">Beyond Technology, Towards People</span>
 
                         <h4>PT. NETWORKS INDONESIA AKU</h4>
 
