Add Word greeting page ceo

--- a/en/ceo.html
+++ b/en/ceo.html
@@ -39,7 +39,7 @@
             <div class="section">
                 <div class="row">
                     <div class="imx">
-
+                        <h3 class="mobile-only">Greeting</h3>
                         <div class="inner">
                             <img class="ceo-img" src='../assets/img/ceo_mrson.jpg' />
                             <div class="text-box">
