--- a/kr/ceo.html
+++ b/kr/ceo.html
@@ -42,6 +42,7 @@
                     <div class="imx">
 
                         <div class="inner">
+                            <h3 class="mobile-only">Greeting</h3>
                             <img class="ceo-img" src='../assets/img/ceo_mrson.jpg' />
                             <div class="text-box">
                                 <span>
