--- a/kr/index.html
+++ b/kr/index.html
@@ -37,7 +37,7 @@
     <div class="page page-in korean-lang" id="page-main">
 
         <!-- Video start -->
-        <video class="video_compro" loop="true" autoplay="true" muted>
+        <video class="video_compro" loop="true" autoplay="true" muted playsinline>
             <source src="../assets/video/company_profile.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
