Update animasi homepage

--- a/en/index.html
+++ b/en/index.html
@@ -44,25 +44,25 @@
 
         <div class="tagline">
             <div class="flex-box right">
-                <div class="text-box wow fadeIn" data-wow-delay="0.6s">
+                <div class="text-box wow fadeInUp">
                     <h3>Green with<br><em>Networks Indonesia Aku</em></h3>
                     <p>NIA seeks coexistence between humans and nature through carbon neutrality and strives to be a responsible party for an inclusive, sustainable and resilient future.</p>
                 </div>
-                <img src='../assets/img/main-img-new01.jpg' />
+                <img src='../assets/img/main-img-new01.jpg' class="wow pulse"/>
             </div>
             <div class="flex-box left">
-                <img src='../assets/img/main-img-new02.jpg' />
-                <div class="text-box wow fadeIn" data-wow-delay="0.6s">
+                <img src='../assets/img/main-img-new02.jpg' class="wow pulse"/>
+                <div class="text-box wow fadeInUp">
                     <h3>Technology with<br><em>Networks Indonesia Aku</em></h3>
                     <p>Based on technology and knowledge gathered through business experience in various fields, NIA will be a milestone for systems & solutions companies that adhere to principles, without compromising on quality.</p>
                 </div>
             </div>
             <div class="flex-box right">
-                <div class="text-box wow fadeIn" data-wow-delay="0.6s">
+                <div class="text-box wow fadeInUp">
                     <h3>Together with<br><em>Networks Indonesia Aku</em></h3>
                     <p>NIA strives to realize a healthy business culture and spread symbiotic values nder the motto of shared growth that pursues social values together, not only with partner companies.</p>
                 </div>
-                <img src='../assets/img/main-img-new03.jpg' />
+                <img src='../assets/img/main-img-new03.jpg' class="wow pulse"/>
             </div>
         </div>
 
