--- a/in/media/media_6.html
+++ b/in/media/media_6.html
@@ -3,20 +3,20 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=2, minimum-scale=1, width=device-width" />
+    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=2, minimum-scale=1, width=device-width">
     <title>NIA</title>
     <link rel="shortcut icon" href="../../assets/img/favicon.ico">
-    <link rel="stylesheet" href="../../assets/css/default.css"/>
-    <link rel="stylesheet" href="../../assets/css/outline.css"/>
-    <link rel="stylesheet" href="../../assets/css/page.css"/>
-    <link rel="stylesheet" href="../../assets/css/owl.carousel.min.css"/>
-    <link rel="stylesheet" href="../../assets/css/owl.theme.default.min.css"/>
+    <link rel="stylesheet" href="../../assets/css/default.css">
+    <link rel="stylesheet" href="../../assets/css/outline.css">
+    <link rel="stylesheet" href="../../assets/css/page.css">
+    <link rel="stylesheet" href="../../assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="../../assets/css/owl.theme.default.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script src="../../assets/js/owl.carousel.min.js"></script>
-    <script src="../../assets/js/common.js"></script>    
+    <script src="../../assets/js/common.js"></script> 
 </head>
 
 <body>
